@@ -50,10 +50,10 @@ extern "C" {
 #define TK_MAJOR_VERSION	8
 #define TK_MINOR_VERSION	6
 #define TK_RELEASE_LEVEL	TCL_BETA_RELEASE
-#define TK_RELEASE_SERIAL	1
+#define TK_RELEASE_SERIAL	2
 
 #define TK_VERSION		"8.6"
-#define TK_PATCH_LEVEL		"8.6b1.2"
+#define TK_PATCH_LEVEL		"8.6b2"
 
 /*
  * A special definition used to allow this header file to be included from
